fixed image rendering, added redirection to RF printing after enrollment, fixed processedBy field on add payment

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,16 @@ html, body {
     height: 50px !important;
     width: 100%;
   }
+
+
+
+.ant-image-preview-img {
+  width: auto;
+  max-width: 100%;
+}
+  
+  .custom-mask {
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+    text-align: center;
+  }
